--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
  <head>
-   <h1> Kyle Sabado - Brebeuf Student <h1>
+   <title> Kyle Sabado / Brebeuf Student <title>
  </head>
+ <body>
+  <h1> Kyle Sabado / Brebeuf Student <h1>
+ </body>
 </html>
