--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
-<head>
-  <title> Kyle Sabado / Brebeuf Student <title>
-</head>
-<body>
- <h1> Kyle Sabado / Brebeuf Student <h1>
-</body>
+  <head>
+    <title> Kyle Sabado / Brebeuf Student </title>
+  </head>
+  <h1>
+     Kyle Sabado / Brebeuf Student
+  </h1>
+  <p>
+    ICS4U Assignment
+  </p>
 </html>
