--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   <p>
     ICS4U Assignment
   </p>
-  <p><a href = "Arrays.md">Arrays and ArrayLists</a></p>
+  <p><a href = "Arrays.html">Arrays and ArrayLists</a></p>
 </html>
