--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   <p>
     ICS4U Assignment
   </p>
-  <p><a href = "Arrays.html">Arrays and ArrayLists</a></p>
+  <p>
+    <a href = "Arrays.html">Arrays and ArrayLists</a>
+    <a href = "ClassesAndObjects.html">Classes and Objects</a>
+    <a href = "Recursion.html">Recursion</a>
+    <a href = "Algorithms.html">Searching and Sorting</a>
+    <a href = "Polymorphism.html">Polymorphism</a>
+  </p>
 </html>
