--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </p>
   <p>
     <a href = "Arrays.html">Arrays and ArrayLists</a>
-    <a href = "ClassesAndObjects.html">Classes and Objects</a>
-    <a href = "Recursion.html">Recursion</a>
-    <a href = "Algorithms.html">Searching and Sorting</a>
-    <a href = "Polymorphism.html">Polymorphism</a>
+    <br><a href = "ClassesAndObjects.html">Classes and Objects</a>
+    <br><a href = "Recursion.html">Recursion</a>
+    <br><a href = "Algorithms.html">Searching and Sorting</a>
+    <br><a href = "Polymorphism.html">Polymorphism</a>
   </p>
 </html>
