--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <html>
   <head>
     <title> Kyle Sabado / Brebeuf Student </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
-  <h1>
-     Kyle Sabado / Brebeuf Student
-  </h1>
-  <p>
-    ICS4U Assignment
-  </p>
-  <p>
-    <a href = "Arrays.html">Arrays and ArrayLists</a>
-    <br><a href = "ClassesAndObjects.html">Classes and Objects</a>
-    <br><a href = "Recursion.html">Recursion</a>
-    <br><a href = "Algorithms.html">Searching and Sorting</a>
-    <br><a href = "Polymorphism.html">Polymorphism</a>
-  </p>
+  <body>
+      <section class="header">
+          <nav>
+              <a href="index.html">Kyle Sabado</a>
+              <div class ="Brebeuf">
+                  <p>&nbsp / Brebeuf Student</p>
+              </div>
+              <div class="links">
+                  <ul>
+                      <li><a href="Arrays.html">Arrays and ArrayLists</a></li>
+                      <li><a href="ClassesAndObjects.html">Classes and Objects</a></li>
+                      <li><a href="Recursion.html">Recursion</a></li>
+                      <li><a href="Algorithms.html">Algorithms</a></li>
+                      <li><a href="Polymorphism.html">Polymorphism</a></li>
+                  </ul>
+              </div>
+          </nav>
+      </section>
+      <div class = "container">
+          <h1>Kyle Sabado</h1>
+          <p>Welcome to my website! <Br> You'll find everything I've learned in ICS4U</p>
+      </div>
+  </body>
 </html>
