--- a/Algorithms.html
+++ b/Algorithms.html
@@ -1,1 +1,31 @@
-<p> Searching and Sorting </p>
+<html>
+  <head>
+    <title> Searching and Sorting </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  </head>
+  <body>
+      <section class="header">
+          <nav>
+              <a href="index.html">Kyle Sabado</a>
+              <div class ="Brebeuf">
+                  <p>&nbsp / Brebeuf Student</p>
+              </div>
+              <div class="links">
+                  <ul>
+                      <li><a href="Arrays.html">Arrays and ArrayLists</a></li>
+                      <li><a href="ClassesAndObjects.html">Classes and Objects</a></li>
+                      <li><a href="Recursion.html">Recursion</a></li>
+                      <li><a href="Algorithms.html">Algorithms</a></li>
+                      <li><a href="Polymorphism.html">Polymorphism</a></li>
+                  </ul>
+              </div>
+          </nav>
+      </section>
+      <div class = "section">
+          <h2>Searching and Sorting</h2>
+      </div>
+  </body>
+</html>
