--- a/Arrays.html
+++ b/Arrays.html
@@ -27,5 +27,10 @@
         <div class = "section">
             <h2>Arrays and ArrayLists</h2>
         </div>
+      <div class = "rectangle"
+        <p>An array is a type of data structure that holds a fixed number of elements of
+              <br>the same type. Arrays can store primitive data types or objects.
+        </p>
+      </div>
     </body>
 </html>
