--- a/Arrays.html
+++ b/Arrays.html
@@ -3,8 +3,8 @@
         <title>Arrays and ArrayLists</title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     </head>
     <body>
         <section class="header">
@@ -27,10 +27,65 @@
         <div class = "section">
             <h2>Arrays and ArrayLists</h2>
         </div>
-      <div class = "rectangle"
-        <p>An array is a type of data structure that holds a fixed number of elements of
-              <br>the same type. Arrays can store primitive data types or objects.
-        </p>
-      </div>
+        <div class = "rectangle">
+            <p>An <b>array</b> is a data structure that holds a fixed number of elements of the same type. Arrays can store primitive data types or objects.
+                <br>
+                <br>
+                An <b>ArrayList</b> is a data structure that can hold a variable number of elements of the same type. ArrayLists can only hold references to objects found in different locations in memory. Thus, primitive data types are autoboxed into ArrayLists.
+            </p>
+        </div>
+        <div class ="instructions">
+            <h2>Implemetation</h2>
+            <h3>How To Implement an Array:</h3>
+            <p>1. First, you need to define what variable type you want to store, followed by a pair of square brackets and the array name.
+                <br><br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] arr;
+                <br><br>
+                2. Now, you can declare a literal array, where you type out the values inside curly braces separated by commas.
+                <br><br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] arr = {"Ferrari", "Mercedes", "Red Bull", "McLaren"}
+                <br><br>
+                3. Or, you can instatiate an array with a fixed size using the "new" keyword followed by the datatype and the desired size within square brackets.
+                <br><br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] arr = new String[4]
+                <br><br>
+                4. If you choose to instatiate like this, you can add values to the array by assigning elements to each index.
+                <br><br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[0] = "Ferrari"
+                <br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[1] = "Mercedes"
+                <br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[2] = "Red Bull"
+                <br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[3] = "McLaren"
+            </p>
+            <br><br><br>
+            <h3>How To Implement an ArrayList:</h3>
+            <p>1. First, you must import ArrayList from the java.util library
+                <br><br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspimport java.util.ArrayList;
+                <br><br>
+                2. Then, you must create an ArrayList object and specify the data type you want to store inside the ArrayList
+                <br><br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspArrayList&ltString&gt = new ArrayList&ltString&gt(4) 
+                <br><br>
+                3. After instantiating the ArrayList, you can add any number of elements to the list using the .add function.
+                <br><br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray.add("Ferrari")
+                <br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray.add("Mercedes")
+                <br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray.add("Red Bull")
+                <br>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray.add("McLaren")
+                <br><br><br>
+            </p>
+            <h3>Printing Arrays and ArrayLists</h3>
+            <p>Simply printing an array using System.out.println will print out the actual address of the array in memory, which looks like a random assortment of characters.
+                <br>
+                Printing an ArrayList in the same way will return each of the array elements within a set of square brackets, but this is not a particularly good way to print the contents of the array.
+                <br>
+            </p>
+        </div>
     </body>
 </html>
