--- a/ClassesAndObjects.html
+++ b/ClassesAndObjects.html
@@ -27,5 +27,23 @@
       <div class = "section">
           <h2>Classes and Objects</h2>
       </div>
+      <div class = "rectangle2">
+            <p>An <b>object</b> is a data type that has its own attributes and methods, and is the basis of Object-Oriented Programming.
+              <br>
+              <br>
+              A <b>class</b> is a Java file created by the user that describes the attributes and behaviors of objects. It is the framework from which objects are created.
+            </p>
+        </div>
+      <div class="instructions">
+        <h2>Implemetation</h2>
+        <h3>How To Implement a Class:</h3>
+        <p>
+          1. You need to give your class a name and create a java file without main. For example, a car class would be.
+          <br><br>
+          Car.java
+          <br><br>
+          2. 
+        </p>
+      </div>
   </body>
 </html>
