--- a/ClassesAndObjects.html
+++ b/ClassesAndObjects.html
@@ -42,7 +42,8 @@
           <br><br>
           Car.java
           <br><br>
-          2. 
+          2. Next, you need to create private instance variables (PIVs) at the top of your class. These PIVs are the attributes of the object this class describes.
+          <br><br>
         </p>
       </div>
   </body>
