--- a/Arrays.html
+++ b/Arrays.html
@@ -39,25 +39,25 @@
             <h3>How To Implement an Array:</h3>
             <p>1. First, you need to define what variable type you want to store, followed by a pair of square brackets and the array name.
                 <br><br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] arr;
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] Array;
                 <br><br>
                 2. Now, you can declare a literal array, where you type out the values inside curly braces separated by commas.
                 <br><br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] arr = {"Ferrari", "Mercedes", "Red Bull", "McLaren"}
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] Array = {"Ferrari", "Mercedes", "Red Bull", "McLaren"}
                 <br><br>
                 3. Or, you can instatiate an array with a fixed size using the "new" keyword followed by the datatype and the desired size within square brackets.
                 <br><br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] arr = new String[4]
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[] Array = new String[4]
                 <br><br>
                 4. If you choose to instatiate like this, you can add values to the array by assigning elements to each index.
                 <br><br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[0] = "Ferrari"
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspArray[0] = "Ferrari"
                 <br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[1] = "Mercedes"
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspArray[1] = "Mercedes"
                 <br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[2] = "Red Bull"
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspArray[2] = "Red Bull"
                 <br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspString[3] = "McLaren"
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspArray[3] = "McLaren"
             </p>
             <br><br><br>
             <h3>How To Implement an ArrayList:</h3>
@@ -71,13 +71,13 @@
                 <br><br>
                 3. After instantiating the ArrayList, you can add any number of elements to the list using the .add function.
                 <br><br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray.add("Ferrari")
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray2.add("Ferrari")
                 <br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray.add("Mercedes")
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray2.add("Mercedes")
                 <br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray.add("Red Bull")
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray2.add("Red Bull")
                 <br>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray.add("McLaren")
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsparray2.add("McLaren")
                 <br><br><br>
             </p>
             <h3>Array and ArrayList Methods</h3>
