--- a/ClassesAndObjects.html
+++ b/ClassesAndObjects.html
@@ -87,6 +87,28 @@
           <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp}
           <br><br>
         </p>
+        <h3>How To Create Objects:</h3>
+        <p>
+          1. Object are typically created in driver clients. When creating an object, you must give it a name and instantiate it using the "new" keyword.
+          <br><br>
+          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCar pista = new Car(Ferrari, Sports Car, 488 Pista, Red);
+          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspCar highlander = new Car(Toyota, SUV, Highlander, Silver);
+          <br><br>
+          2. You can use the methods you created on the newly created object. These methods are called by saying object.function(), and filling the brackets with the required parameters.
+          <br><br>
+          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsppista.getName();
+          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsppista.getColour();
+          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsppista.sameName(highlander);
+          <br><br>
+          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<b>Output:</b>
+          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp488 Pista
+          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspRed
+          <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspFalse
+        </p>
+      </div>
+      <div class="example">
+        <h1>Example of a Java Class</h1>
+        <img class ="class-img" src="flight_class.png" alt="flight class">
       </div>
   </body>
 </html>
