--- a/Polymorphism.html
+++ b/Polymorphism.html
@@ -27,5 +27,25 @@
       <div class = "section">
           <h2>Polymorphism</h2>
       </div>
+      <div class = "rectangle5">
+          <p>
+              <b>Polymorphism</b> occurs when classes are connected to each other by inheritance. Inheritance allows you to use attributes and methods from one class in another one. One action can be performed in many different ways using polymorphism. 
+          </p>
+      </div>
+      <div class = "instructions">
+          <h2>Implementation</h2>
+          <p>1. In order to implement polymorphism, you must create multiple classes that inherit from each other. 
+             <br><br>2. A class inherits from another class using the "extends" key word. A class that extends another class becomes a subclass of the class it extends from.
+             <br><br>3. When making the constructor of a subclass, you can use super(x, y, z) instead of initializing each variable individually if the PIVs are shared from the superclass.
+             <br><br>4. The subclass can override methods from the superclass. Using @Override before the  method is standard practice when overriding a method, but it is not necessary.
+             <br><br>5. You can call superclass methods like getters and setters by prefacing the method name with super.method(). This is useful for toString, where you may need to call super.getName(), or something similar.
+             <br><br><h2>Example of Polymorphism in Java</h2>
+             <h3>Superclass</h3>
+             <img class ="search-img" src="team.png" alt="team">
+             <br><br>
+             <h3>Subclass</h3>
+             <img class ="search-img" src="basketballteam.png" alt="basketball team">
+          </p>
+      </div>
   </body>
 </html>
