--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       </section>
       <div class = "container">
           <h1>Kyle Sabado</h1>
-          <p>Welcome to my website! <Br> You'll find everything I've learned in ICS4U</p>
+          <p>Welcome to my website! <Br> You'll find everything I've learned in ICS4U
+            <br><li><a href="https://github.com/Kylx28/KyleSabado">Link to GitHub</a></li>
+            </p>
+            
       </div>
   </body>
 </html>
