--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class = "container">
           <h1>Kyle Sabado</h1>
           <p>Welcome to my website! <Br> You'll find everything I've learned in ICS4U
-            <br><li><a href="https://github.com/Kylx28/KyleSabado">Link to GitHub</a></li>
+            <li><a href="https://github.com/Kylx28/KyleSabado">Link to GitHub</a></li>
             </p>
             
       </div>
