--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
       <div class = "container">
           <h1>Kyle Sabado</h1>
           <p>Welcome to my website! <Br> You'll find everything I've learned in ICS4U
-            <li><a href="https://github.com/Kylx28/KyleSabado">Link to GitHub</a></li>
-            </p>
-            
+            <li><a style="font-weight:bold" href="https://github.com/Kylx28/KyleSabado">Link to GitHub</a></li>
+            </p> 
       </div>
   </body>
 </html>
